[project]
name = "electoral-methods-comparison"
version = "0.1.0"
description = ""
authors = [
    {name = "Diana Azevedo",email = "rplazevedo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "electoral_methods_comparison", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
